Fixes featured project overflow on xg desktop sizes

--- a/src/scss/sections/sections/_featured-work.scss
+++ b/src/scss/sections/sections/_featured-work.scss
@@ -24,8 +24,12 @@
                 max-width: 90%;
             }
         }
-    
+        
+        
+
+
     }
+
     padding: 0 $padding-sm $padding-lg;
     display: flex;
     flex-direction: column;
@@ -42,6 +46,7 @@
     }
 
     .see-more-btn {
+        position: relative;
         padding: 0.5rem;
         background-color: #00000000;
         border-radius: 10px;
@@ -58,5 +63,21 @@
             color: $foreground--accent;
             animation: btnHover 0.65s ease-in-out;
         }
+    }
+
+    @media(min-width: 125rem) {
+        .project-wrapper {
+            min-height: 700px;
+
+            .project {
+                margin-top: -30rem;
+            }
+        }
+
+        .see-more-btn {
+            bottom: 10rem;
+            left: 3.75rem;
+        }
+        
     }
 }
